<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/sectTopBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="13.1">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/topAppBar"
                        style="@style/Widget.MaterialComponents.Toolbar.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/black"
                        app:menu="@menu/top_menu"
                        app:navigationIcon="@drawable/menu"
                        app:title="@string/app_name"
                        app:titleTextColor="@color/white" />

                </com.google.android.material.appbar.AppBarLayout>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <FrameLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNav"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/black"
                android:elevation="16dp"
                app:itemIconTint="@color/color_tab"
                app:itemTextColor="@color/color_tab"
                app:menu="@menu/bottom_menu" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="240dp"
            android:layout_height="360dp"
            android:layout_margin="20dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="0dp"
            app:checkedIconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayoutCompat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/linearLayoutCompat"
            app:layout_constraintVertical_bias="0.2"
            app:strokeColor="@android:color/white"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/the_dark_knight_baner">

                <Button
                    android:id="@+id/buttonMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/play"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nameMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/white"
                    android:fontFamily="@font/roboto"
                    android:padding="10dp"
                    android:text="@string/batman"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/actorsMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:padding="10dp"
                    android:text="@string/director"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/longMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:padding="10dp"
                    android:text="@string/longMovie"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerSelectPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card"
            android:layout_marginTop="10dp"
            android:text="@string/headerPart"
            android:textColor="@android:color/white"/>


        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:stepSize="1"
            android:valueFrom="1"
            android:valueTo="3"
            app:layout_constraintEnd_toEndOf="@+id/card"
            app:layout_constraintStart_toStartOf="@id/card"
            app:layout_constraintTop_toBottomOf="@id/headerSelectPart"
            app:thumbColor="@android:color/holo_orange_dark"
            app:tickColorActive="@color/orange"
            app:tickColorInactive="@android:color/black"
            app:trackColorActive="@android:color/holo_orange_dark"
            app:trackColorInactive="@android:color/darker_gray" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/selectedPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slider"
            android:layout_margin="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descSelectedPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectedPart"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
